# advent_of_code_2024

./: .gitignore  Cargo.toml  README.md  justfile  rustfmt.toml
.support/cargo_generate_templates/_template__new_day/src/: main.rs  support.rs
.support/cargo_generate_templates/_template__new_day/src/support/: error.rs
.support/cargo_generate_templates/cg_template__new_day/: README.md
.support/cargo_generate_templates/cg_template__new_day/src/: parse.rs
.support_data/cargo_generate_templates/cg_template__new_day/: Cargo.toml  README.md
.support_data/cargo_generate_templates/cg_template__new_day/src/: lib.rs  main.rs  parse.rs  part1_lib.rs  part2_lib.rs  support.rs
.support_data/cargo_generate_templates/cg_template__new_day/src/support/: error.rs  subscriber.rs
crates/day01/: Cargo.toml  README.md
crates/day01/src/: lib.rs  main.rs  part1_lib.rs  support.rs
crates/day01/src/part1_lib/: parse1.rs
crates/day01/src/part2_lib/: parse2.rs
crates/day01/src/support/: error.rs
crates/day02/: Cargo.toml  README.md
crates/day02/data/: custom_input.txt
crates/day02/src/: lib.rs  part1_lib.rs  support.rs
crates/day02/src/support/: error.rs
crates/day03/: Cargo.toml
crates/day03/src/: lib.rs  parse.rs  support.rs
crates/day04/: Cargo.toml
crates/day04/src/: parse.rs  part1_lib.rs  part2_lib.rs  support.rs
crates/day04/src/support/: error.rs
crates/day05/: Cargo.toml  README.md
crates/day05/data/: custom_input.txt
crates/day05/src/: lib.rs  parse.rs  part1_lib.rs  support.rs
crates/day05/src/support/: error.rs
crates/day06/: Cargo.toml  README.md
crates/day06/examples/: 06exp-egui_maze.rs  06exp-gen_maze.rs
crates/day06/src/: main.rs  parse.rs  part1_lib.rs  part2_lib.rs
crates/day06/src/parse/: objects.rs
crates/day06/src/support/: error.rs
crates/day07/: Cargo.toml  README.md
crates/day07/examples/: 07exp-print.rs  dbg
crates/day07/src/: main.rs  parse.rs  part1_lib.rs  part2_lib.rs
crates/day07/src/support/: error.rs
day01/: Cargo.toml  README.md
day01/src/: main.rs  part1_lib.rs  part2_lib.rs
day01/src/part1_lib/: parse1.rs
day01/src/part2_lib/: parse2.rs
day01/src/support/: subscriber.rs
day02/: Cargo.toml  README.md
day02/data/: custom_input.txt
day02/src/: lib.rs  main.rs  part1_lib.rs  part2_lib.rs
day02/src/part1_lib/: parse1.rs
day02/src/part2_lib/: parse2.rs
day02/src/support/: error.rs  subscriber.rs
day03/: Cargo.toml  README.md
day03/data/: custom_input.txt
day03/src/: lib.rs  main.rs  parse.rs  part1_lib.rs  part2_lib.rs
day03/src/support/: error.rs  subscriber.rs
day04/: Cargo.toml  README.md
day04/data/: custom_input.txt
day04/src/: lib.rs  main.rs  parse.rs  part1_lib.rs  part2_lib.rs  support.rs
day04/src/support/: error.rs  subscriber.rs
day05/: Cargo.toml  README.md
day05/data/: custom_input.txt
day05/src/: lib.rs  main.rs  parse.rs  part1_lib.rs  part2_lib.rs  support.rs
day05/src/support/: error.rs  subscriber.rs
day06/: Cargo.toml  README.md
day06/examples/: egui_maze.rs  gen_maze.rs
day06/src/: lib.rs  main.rs  parse.rs  parse_orig.rs  part1_lib.rs  part2_lib.rs  support.rs
day06/src/parse/: objects.rs
day06/src/support/: dirty_terminal.rs  error.rs  subscriber.rs
day07/: Cargo.toml
day07/src/: lib.rs  part1_lib.rs  support.rs
day07/src/support/: subscriber.rs
