[package]
name = "day01"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
repository.workspace = true
# publish.workspace = true
# license.workspace = true
# license-file.workspace = true

[lints]
workspace = true

[dependencies]
## --CLI--
clap.workspace = true
dialoguer.workspace = true
owo-colors.workspace = true
indicatif.workspace = true
## --Diagnostics-- ### tracing-appender = "0.2.3" # tracing-flame = "" # tracing-error = "0.2.1" # tracing-timing = "0.6.0" ## --Env & Files--
tracing.workspace = true
tracing-tree.workspace = true
tracing-subscriber.workspace = true
## --General--
bon.workspace = true
derive_more.workspace = true
indoc.workspace = true
itertools.workspace = true
## --Math--
chrono.workspace = true
rand.workspace = true
## --Parsing--
logos.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
winnow.workspace = true
# Dev-Dependencies
## --Property Sample Testing--
quickcheck.workspace = true
quickcheck_macros.workspace = true
## --Test Trace-Logging--
test-log.workspace = true
